--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     /* box-sizing: border-box; */
 }
+
 /* ---------------Header Part Start Here--------------------- */
 header {
     width: 100%;
@@ -18,17 +19,24 @@ header {
     padding: 0 10vw;
     box-sizing: border-box;
 }
+.sopping-cart
+{
+    display: none;
+}
 .logo_header {
     font-weight: 700;
     font-size: 1.5em;
     color: #3A3A3A;
 }
+
 .hanburger {
     display: none;
 }
+
 .nav-bar ul {
     display: flex;
 }
+
 .nav-bar ul li a {
     display: block;
     color: #3A3A3A;
@@ -43,30 +51,71 @@ header {
     background: #161414;
 }
 
-.nav-bar ul li
-{
+.nav-bar ul li {
     list-style: none;
 }
-.nav-bar ul li a
-{
+
+.nav-bar ul li a {
     text-decoration: none;
 }
-/* ---------------------Header Part End--------------- */
 
+/* ---------------------Header Part End--------------- */
+/* -----------Top Header Part------------------ */
+.top-header
+{
+    margin: 150px 80px;
+}
+.top-header-container {
+    display: flex;
+    gap: 9vw;
+}
+
+.top-text-side h1 {
+    font-size: 3.5em;
+    font-weight: 700;
+    margin-bottom: 16px;
+}
+
+.top-text-side p {
+    font-size: 1em;
+    font-weight: 600;
+    margin-bottom: 16px;
+}
+
+.top-btn {
+    background: #E02C6D;
+    width: 196px;
+    height: 44px;
+    border-radius: 41px;
+    border: 0;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.top-img-part img
+{
+    width: 100%;
+}
 /* ----------Responsive CSS Start ------------------ */
 
 @media only screen and (max-width:576px) {
-    
+
     /* -------------Header Responsive Part Start------------------ */
     .logo_header {
         font-weight: 700;
         font-size: 1em;
         color: #3A3A3A;
     }
+    .sopping-cart
+    {
+        display: block;
+    }
     .hanburger {
         display: block;
         cursor: pointer;
     }
+
     .nav-bar {
         height: 0;
         position: absolute;
@@ -100,9 +149,32 @@ header {
         margin-bottom: 12px;
         color: #ffffff;
     }
+
     .nav-bar ul li a:hover {
         color: #ffffff;
         background: #916666;
     }
+
     /* ---------Header Responsive Part End---------- */
+    /* ------------Top Header Part--------- */
+    .top-header-container
+    {
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+    .top-text-side h1
+    {
+        font-size: 2.9em;
+    }
+    .btn-container
+    {
+        display: flex;
+        justify-content: center;
+    }
+    .top-header
+    {
+        margin: 0 auto;
+    }
 }
